Implemented more code

--- a/FragmentsStartingPoint/app/src/main/res/values/strings.xml
+++ b/FragmentsStartingPoint/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FragmentsStartingPoint</string>
+    <string name="intent_message">intent_message</string>
 </resources>
